k8s/overlays/dev/patches/init-container-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghanawaters-api
spec:
  template:
    spec:
