k8s/overlays/dev/patches/node-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghanawaters-api
spec:
  template:
    spec:
      containers:
      - name: ghanawaters-api
