k8s/overlays/dev/patches/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapper-admin
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapper-api
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapper-frontend
spec:
  replicas: 1
